--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>spring-cloud-services-starter-config-client</artifactId>
         </dependency>
         <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+        
+        <dependency>
             <groupId>io.pivotal.spring.cloud</groupId>
             <artifactId>spring-cloud-services-starter-service-registry</artifactId>
         </dependency>
